--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ version: 1.0.0+1
 environment:
   sdk: ^3.8.1
 
+
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -30,14 +31,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   local_auth: ^2.3.0
-  firebase_core: ^3.15.2
-  cloud_firestore: ^5.6.12
+  firebase_core: ^4.1.1
+  cloud_firestore: ^6.0.2
   provider: ^6.1.2
+  flutter_svg: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +48,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  rename_app: ^1.6.5
+  flutter_launcher_icons: ^0.14.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,4 +58,22 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/logo.png
+    - assets/app_icon/
+    - assets/icons/
+    - assets/logos/
+
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-VariableFont.ttf
+        - asset: assets/fonts/Inter-Italic-VariableFont.ttf
+
+rename_app:
+  name: "AceUp"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logos/solid_dark.png"
+  adaptive_icon_background: "#122C4A"
+  adaptive_icon_foreground: "assets/app_icon/foreground.png"
