--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cloud_firestore: ^6.0.2
   provider: ^6.1.2
   flutter_svg: ^2.2.1
+  intl: ^0.19.0 
 
 dev_dependencies:
   flutter_test:
