--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cloud_firestore: ^6.0.2
   provider: ^6.1.2
   flutter_svg: ^2.2.1
-  intl: ^0.19.0 
+  intl: ^0.20.2
+  font_awesome_flutter: ^10.10.0
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +61,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/app_icon/
-    - assets/icons/
     - assets/logos/
 
   fonts:
@@ -68,6 +68,7 @@ flutter:
       fonts:
         - asset: assets/fonts/Inter-VariableFont.ttf
         - asset: assets/fonts/Inter-Italic-VariableFont.ttf
+          style: italic
 
 rename_app:
   name: "AceUp"
