--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   provider: ^6.1.2
   flutter_svg: ^2.2.1
   intl: ^0.20.2
+  font_awesome_flutter: ^10.10.0
   http: ^1.1.0
   firebase_auth: ^6.1.0
   flutter_secure_storage: ^9.2.2
-  font_awesome_flutter: 10.9.1
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +65,6 @@ flutter:
   assets:
     - assets/app_icon/
     - assets/logos/
-    - assets/logos/t_blue.svg
-    # Removed 'assets/icons/' since the directory does not exist
 
   fonts:
     - family: Inter
