--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   local_auth: ^2.3.0
   firebase_core: ^4.1.1
   cloud_firestore: ^6.0.2
+  firebase_messaging: ^16.0.2
   provider: ^6.1.2
   flutter_svg: ^2.2.1
   intl: ^0.20.2
