--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,11 @@ dependencies:
   provider: ^6.1.2
   flutter_svg: ^2.2.1
   intl: ^0.20.2
-  font_awesome_flutter: ^10.10.0
+  font_awesome_flutter: ^10.9.1
   http: ^1.1.0
   firebase_auth: ^6.1.0
   flutter_secure_storage: ^9.2.2
+  firebase_analytics: ^12.0.2
 
 dev_dependencies:
   flutter_test:
